--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,8 @@
 <h1>{{name}}</h1>
-<p>
-  <app-heros></app-heros>
-</p>
+<nav>
+	<a routerLink="/dashboard">Dashboard</a>
+	<a routerLink="/heroes">Heroes</a>
+</nav>
+
+<router-outlet></router-outlet>
+<app-messages></app-messages>
